Organize Code + Comments — Components

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/full-page-drawer/static_full-page-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/full-page-drawer/static_full-page-drawer.html
@@ -19,12 +19,12 @@
   }
 </style>
 
-<!-- Full Page Drawer -->
+<!--/* Full Page Drawer */-->
 <div class="full-page-drawer">
     <div class="container-fixed container-padding">
         <div class="row">
             <div class="col-xs-12">
-              <!-- Include: Country Selector -->
+              <!--/* Include: Country Selector */-->
               <p>Full Page Drawer</p>
               <sly data-sly-resource="${'country-selector' @ resourceType='eaton/static-components/content/country-selector'}"></sly>
             </div>
