--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
@@ -38,21 +38,17 @@
 <section class="mega-menu">
     <div class="container-fixed container-padding">
         <div class="row">
-            <!-- CONTENT MODULES -->
-
-            <!-- Include: Mega-Menu-Products -->
+            <!--/*  Include: Mega-Menu-Products */-->
             <sly data-sly-include="pages/mega-menu-products.html" />
 
-            <!-- Include: Mega-Menu-Support -->
+            <!--/*  Include: Mega-Menu-Support */-->
             <sly data-sly-include="pages/mega-menu-support.html" />
 
-            <!-- Include: Mega-Menu-Services -->
+            <!--/*  Include: Mega-Menu-Services */-->
             <sly data-sly-include="pages/mega-menu-services.html" />
 
-            <!-- Include: Mega-Menu-Company -->
+            <!--/*  Include: Mega-Menu-Company */-->
             <sly data-sly-include="pages/mega-menu-company.html" />
-
-            <!-- / CONTENT MODULES -->
         </div>
     </div>
 </section>
