--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/full-page-drawer/full-page-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/full-page-drawer/full-page-drawer.html
@@ -1,3 +1,3 @@
-<!-- Integrated code goes here -->
+<!--/* Integrated code goes here */-->
 
-<div data-sly-include="static_full-page-drawer.html"></div>
+<sly data-sly-include="static_full-page-drawer.html"></sly>
