--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -1,12 +1,10 @@
 
 <header data-sly-use.header="header-data.js">
     <div class="eaton-header">
-        <!-- CONTENT MODULES -->
-
-        <!-- Include: Full Page Drawer -->
+        <!--/* Include: Full Page Drawer */*/-->
         <sly data-sly-resource="${'full-page-drawer' @ resourceType='eaton/static-components/structure/full-page-drawer'}"></sly>
 
-        <!-- Utility Navigation -->
+        <!--/* Utility Navigation */-->
         <div class="header-utility-nav">
             <div class="container-fixed container-padding">
                 <div class="row">
@@ -23,20 +21,20 @@
             </div>
         </div>
 
-        <!-- Primary Navigation -->
+        <!--/* Primary Navigation */-->
         <div class="header-primary-nav">
             <div class="container-fixed container-padding">
                 <div class="row">
-                    <!-- Logo -->
+                    <!--/* Logo */-->
                     <div class="col-xs-6 col-md-3">
-                        <sly data-sly-resource="${'logo' @ resourceType='eaton/static-components/structure/logo'}"></sly>
+                        <a href="#">Logo goes here</a>
                     </div>
-                    <!-- Search & Mobile Hamburger Menu  -->
+                    <!--/* Search & Mobile Hamburger Menu  */-->
                     <div class="col-xs-6 col-md-push-7 col-md-2">
                         <a href="#">Search &nbsp; </a>
                         <a href="#">M-Menu > </a>
                     </div>
-                    <!-- Link List: Primary Navigation  -->
+                    <!--/* Link List: Primary Navigation  */-->
                     <div class="col-md-pull-2 col-md-7">
                         <sly data-sly-use.tpl="../../content/link-list/views/primary-navigation.html">
                           <sly data-sly-call="${ tpl.primaryNavigation @ data=header.primaryNavigation }"></sly>
@@ -46,9 +44,8 @@
             </div>
         </div>
 
-        <!-- Include: Mega Menu -->
+        <!--/* Include: Mega Menu */-->
         <sly data-sly-resource="${'mega-menu' @ resourceType='eaton/static-components/structure/mega-menu'}"></sly>
-        <!-- / CONTENT MODULES -->
     </div>
 </header>
 
