--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
@@ -1,5 +1,5 @@
 <!-- Static HTML code goes here -->
-<div data-sly-use.ttil="js/title-text-image-link-data.js">
-    <h1>${ttil.title}</h1>
-    <p>${ttil.text}</p>
+<div data-sly-use.data="data/title-text-image-link-data.js">
+  <h1>${ data.title }</h1>
+  <p>${ data.text }</p>
 </div>
