--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/country-selector.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/country-selector.html
@@ -1,4 +1,4 @@
 
 <!-- Integrated code goes here -->
 
-<div data-sly-include="static_country-selector.html"></div>
+<sly data-sly-include="static_country-selector.html"></sly>
