--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/static_country-selector.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/static_country-selector.html
@@ -1,4 +1,4 @@
 
 <!-- CONTENT VIEWS -->
 <!-- View: Drawer -->
-<div data-sly-unwrap data-sly-include="views/drawer.html"></div>
+<sly data-sly-unwrap data-sly-include="views/drawer.html"></sly>
