--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/link-list.html
@@ -1,4 +1,4 @@
 
 <!-- Integrated code goes here -->
 
-<div data-sly-include="static_link-list.html"></div>
+<sly data-sly-include="static_link-list.html"></sly>
