--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/logo/static_logo.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/logo/static_logo.html
@@ -1,4 +1,8 @@
 
+<sly data-sly-test="${ wcmmode.edit }">
+  <div class="alert alert-warning">Logo Component</div>
+</sly>
+
 <sly data-sly-use.data="data/logo-data.js">
   <div class="eaton-logo">
     <img
