--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/social-links/social-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/social-links/social-links.html
@@ -1,4 +1,4 @@
 
 <!-- Integrated code goes here -->
 
-<div data-sly-include="static_social-links.html"></div>
+<sly data-sly-include="static_social-links.html"></sly>
