--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/title-text-image-link-list.html
@@ -1,3 +1,2 @@
-<!-- Integrated code goes here -->
-
+<sly data-sly-test="${wcmmode.edit}">TTIL List</sly>
 <sly data-sly-include="static_title-text-image-link-list.html"></sly>
