--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/title-text-image-link-list.html
@@ -1,2 +1,4 @@
-<sly data-sly-test="${wcmmode.edit}">TTIL List</sly>
+<sly data-sly-test="${ wcmmode.edit }">
+    <div class="alert alert-warning">TTIL List</div>
+</sly>
 <sly data-sly-include="static_title-text-image-link-list.html"></sly>
