--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
@@ -17,7 +17,10 @@
         <h4 class="eaton-link-list__title" >${featuredTopic.leftList.title}</h4>
         <ul class="eaton-link-list--no-list-style" >
           <li data-sly-repeat="${featuredTopic.leftList.items}">
-            <a class="h5-link" aria-label="Go to" href="${item.href}">${item.title}</a>
+            <a class="h5-link"
+              aria-label="Go to"
+              href="${item.href}"
+            >${item.title}</a>
           </li>
         </ul>
       </div>
@@ -27,16 +30,20 @@
         <h4 class="eaton-link-list__title">${featuredTopic.rightList.title}</h4>
         <ul  class="eaton-link-list--no-list-style" >
           <li data-sly-repeat="${featuredTopic.leftList.items}">
-            <a class="h5-link" aria-label="Go to" href="${item.href}">${item.title}</a>
+            <a class="h5-link"
+              aria-label="Go to"
+              href="${item.href}"
+            >${item.title}</a>
           </li>
         </ul>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 u-text-center">
-        <a href="${featuredTopic.ctaHref}" aria-label="Go to" class="b-button b-button--secondary b-button--light">
-          ${featuredTopic.ctaText}
-        </a>
+        <a href="${featuredTopic.ctaHref}"
+          aria-label="Go to"
+          class="b-button b-button--secondary b-button--light"
+        >${featuredTopic.ctaText}</a>
       </div>
     </div>
   </div>
