[M-11] page overview sass coding

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
@@ -4,5 +4,7 @@
 <div data-sly-test="${properties.view == 'featured-story'}">
     <sly data-sly-include="views/view-featured-story.html"></sly>
 </div>
-
+<div data-sly-test="${properties.view == 'product-overview'}">
+    <sly data-sly-include="views/view-product-overview.html"></sly>
+</div>
 
