--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/logo/static_logo.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/logo/static_logo.html
@@ -5,10 +5,8 @@
 
 <sly data-sly-use.data="data/logo-data.js">
   <div class="eaton-logo">
-    <img
-      class="eaton-logo__image"
-      src="${ data.imageSrc }"
-      alt="${ data.imageAlt }"
-    >
+    <a href="/" class="eaton-logo__link">
+      <img class="eaton-logo__image img-responsive" src="${ data.imageSrc }" alt="${ data.imageAlt }" />
+    </a>
   </div>
 </sly>
