--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/featured-topic.html
@@ -1,3 +1,3 @@
 <!-- Integrated code goes here -->
 
-<div data-sly-include="data/static_featured-topic.html"></div>
+<div data-sly-include="static_featured-topic.html"></div>
