--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
@@ -1,42 +1,6 @@
-<style>
-    .mega-menu {
-        background: #333F48;
-        padding: 30px 0;
-    }
-
-    .mega-menu__content  {
-      background: #EEF0F2;
-      padding: 20px;
-      color: #005EB8;
-      margin-bottom: 20px;
-    }
-
-    .mega-menu--no-margin {
-      margin-bottom: 0;
-    }
-
-    @media (max-width: 991px) {
-        .mega-menu {
-          position: fixed;
-          width: 100%;
-          top: 100px;
-          bottom: 42px;
-          transition: all 0.7s ease-in-out;
-          overflow: auto;
-          transform: translate(100%);
-          visibility: hidden;
-        }
-
-        .nav-open.level-2-open .mega-menu {
-          visibility: visible;
-          transform: translate(0);
-        }
-    }
-
-</style>
 
 <section class="mega-menu">
-    <div class="container-fixed container-padding">
+    <div class="container">
         <div class="row">
             <!--/*  Include: Mega-Menu-Products */-->
             <sly data-sly-include="pages/mega-menu-products.html" />
