changed copys and aria texts

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
@@ -51,7 +51,7 @@
     <div class="row eaton-featured-topic__button-container">
       <div class="col-sm-12 u-text-center">
         <a href="${featuredTopic.ctaHref}"
-          aria-label="Go to"
+          aria-label="Go to ${ item.ctaText }"
           class="b-button b-button--secondary b-button--light"
         >${featuredTopic.ctaText}</a>
       </div>
