--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -32,12 +32,18 @@
                       </div>
                     </div>
                     <!--/* Search & Mobile Hamburger Menu  */-->
-                    <div class="col-xs-6 col-md-push-7 col-md-2">
-                        <a href="#">Search &nbsp; </a>
-                        <a href="#">M-Menu > </a>
+                    <div class="col-xs-6 col-md-push-8 col-md-1 header-primary-nav__links">
+                        <a href="#" class="header-primary-nav__open-search">
+                          <span class="sr-only">Search</span>
+                          <i class="glyphicon glyphicon-search" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" class="header-primary-nav__open-mobile-menu">
+                          <span class="sr-only">Open Mobile Menu</span>
+                          <i class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></i>
+                        </a>
                     </div>
                     <!--/* Link List: Primary Navigation  */-->
-                    <div class="col-md-pull-2 col-md-7">
+                    <div class="col-md-pull-1 col-md-8">
                         <sly data-sly-use.tpl="../../content/link-list/views/view-primary-nav.html">
                           <sly data-sly-call="${ tpl.primaryNavigation @ data=header.primaryNavigation }"></sly>
                         </sly>
