--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
@@ -2,60 +2,9 @@
     <div class="alert alert-warning">Title Text Image Link Component - Edit Start</div>
 </sly>
 
-<!--/* sly data-sly-test="${properties.view == 'l2-hero'}" */-->
-    <style type="text/css">
-        .category-hightlight-header__text {
-            font-size: 1.5em;
-            color: #FFF;
-        }
-
-        .category-hightlight-header__title {
-            font-size: 3.5em;
-            line-height: 1.192em;
-            color: #FFF;
-        }
-
-        .category-hightlight-header__image {
-            /*background-image: url(/content/dam/eaton/images/story_board.png);*/
-            background-size: cover;
-            height: 450px;
-        }
-
-        .category-hightlight-header--vertical-align {
-            display: flex;
-            align-items: center;
-        }
-
-        @media only screen and (max-width: 767px) {
-            .category-hightlight-header__image {
-               height: 400px;
-               /*background-image: url(/content/dam/eaton/images/story_boardphone2.png);*/
-            }
-
-            .category-hightlight-header__title {
-                font-size: 2.5em;
-            }
-
-            .category-hightlight-header__text {
-                font-size: 1.3em;
-            }
-        }
-
-        @media only screen and (min-width : 768px) and (max-width: 991px) {
-            .category-hightlight-header-header__image {
-               height: 300px;
-               /*background-image: url(/content/dam/eaton/images/story_boardtablet.png);*/
-            }
-            
-            .category-hightlight-header__title {
-                font-size: 3em;
-            }
-        }
-    </style>
-
+<sly data-sly-test="${properties.view == 'l2-hero'}">
     <sly data-sly-include="views/view-l2-hero.html" data-sly-unwrap></sly>
-
-<!--/* /sly */-->
+</sly>
 
 <sly data-sly-test="${ wcmmode.edit }">
     <div class="alert alert-warning">Title Text Image Link Component - Edit End</div>
