fixed some typos / added alert on component edit

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
@@ -1,4 +1,6 @@
-<sly data-sly-test="${wcmmode.edit}">Featured Topic</sly>
+<sly data-sly-test="${ wcmmode.edit }">
+  <div class="alert alert-warning">Featured Topic</div>
+</sly>
 
 <!--/* BEGIN M-28 Featured Topic Component */ -->
 <sly data-sly-test="!${wcmmode.edit}" data-sly-use.featuredTopic="data/featured-topic-data.js" >
