Level 1- links (Inline) - Merge with component once its merged in

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
@@ -1,6 +1,6 @@
 
 <section class="mega-menu">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <!--/*  Include: Mega-Menu-Products */-->
             <sly data-sly-include="pages/mega-menu-products.html" />
