--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -1,3 +1,20 @@
-<div class="col-xs-12 mega-menu__content ">
-    Products: Menu
+<div class="mega-menu__content">
+    <!--/* Include Level 1: Links *-->
+    <div class="container">
+        <div class="eaton-title">
+            <a href="#" class="eaton-title__level1-link">
+              <i class="eaton-title__icon glyphicon glyphicon-menu-left" aria-hidden="true"></i>
+              <span>Products</span>
+              <i class="eaton-title__icon glyphicon glyphicon-menu-right" aria-hidden="true"></i>
+            </a>
+            <a href="#" class="eaton-title__close-menu">
+              <span class="sr-only">Close Search</span>
+              <i class="eaton-title__icon glyphicon glyphicon-remove" aria-hidden="true"></i>
+            </a>
+        </div>
+    </div>
+
+    <!--/* Include: Mega Menu Modules */ -->
+    <div class="mega-menu__category">
+    </div>
 </div>
