--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -16,5 +16,13 @@
 
     <!--/* Include: Mega Menu Modules */ -->
     <div class="mega-menu__category">
+      <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-3">
+                <sly data-sly-resource="${'search-inline' @ resourceType='/apps/eaton/static-components/content/search-box'}"></sly>
+            </div>
+          </div>
+      </div>
     </div>
+
 </div>
