--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
@@ -1,5 +1,5 @@
 
-<section class="mega-menu">
+<section class="mega-menu dark-theme">
     <div class="container-fluid">
         <div class="row">
             <!--/*  Include: Mega-Menu-Products */-->
