--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
@@ -1,3 +1,7 @@
+<sly data-sly-test="${ wcmmode.edit }">
+    <div class="alert alert-warning">TTIL List</div>
+</sly>
+
 <div data-sly-test="${properties.view == 'landing-hero'}">
     <sly data-sly-include="views/view-landing-hero.html"></sly>
 </div>
@@ -7,4 +11,3 @@
 <div data-sly-test="${properties.view == 'product-overview'}">
     <sly data-sly-include="views/view-product-overview.html"></sly>
 </div>
-
