--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
@@ -2,6 +2,7 @@
 <footer class="eaton-footer"
   data-sly-use.data="data/footer-data.js">
 
+  <!--/* Footer: Top */-->
   <div class="eaton-footer-top">
     <div class="container">
 
@@ -13,16 +14,13 @@
         </div>
       </div>
 
-
       <div class="row">
 
         <!--/* Column #1 */-->
         <div class="col-xs-12 col-md-6">
-
           <div class="eaton-footer-top__text">
             <sly data-sly-resource="${'footer-text' @ resourceType='/apps/eaton/static-components/general/text'}"></sly>
           </div>
-
         </div>
 
         <!--/* Column #2 */-->
@@ -34,15 +32,12 @@
 
         <!--/* Column #3 */-->
         <div class="col-xs-12 col-md-3">
-
           <div class="eaton-footer-top__link-list">
             <sly data-sly-resource="${'footer-link-list-popular' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
           </div>
-
           <div class="eaton-footer-top__social-links">
             <sly data-sly-resource="${'footer-social-links' @ resourceType='/apps/eaton/static-components/content/social-links'}"></sly>
           </div>
-
         </div>
       </div>
     </div>
@@ -54,15 +49,13 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-
           <div class="eaton-footer-bottom__link-list">
             <sly data-sly-resource="${'footer-link-list-legal' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
           </div>
-
           <div class="eaton-footer-bottom__copyright"> ${ data.bottom.copyright } </div>
-
         </div>
       </div>
     </div>
   </div>
+
 </footer>
