--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
@@ -9,33 +9,35 @@
       <div class="row">
         <div class="col-xs-12 col-md-6">
           <div class="eaton-footer-top__logo">
-            <sly data-sly-resource="${'footer-logo' @ resourceType='/apps/eaton/static-components/content/logo'}"></sly>
+            <!--/* Component: Logo */-->
+            <sly data-sly-resource="${'footer-logo' @ resourceType='/apps/eaton/static-components/structure/logo'}"></sly>
           </div>
         </div>
       </div>
 
       <div class="row">
 
-        <!--/* Column #1 */-->
         <div class="col-xs-12 col-md-6">
           <div class="eaton-footer-top__text">
+            <!--/* Component: Text */-->
             <sly data-sly-resource="${'footer-text' @ resourceType='/apps/eaton/static-components/general/text'}"></sly>
           </div>
         </div>
 
-        <!--/* Column #2 */-->
         <div class="col-xs-12 col-md-3">
           <div class="eaton-footer-top__link-list">
+            <!--/* Component: LinkList */-->
             <sly data-sly-resource="${'footer-link-list-company' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
           </div>
         </div>
 
-        <!--/* Column #3 */-->
         <div class="col-xs-12 col-md-3">
           <div class="eaton-footer-top__link-list">
+            <!--/* Component: LinkList */-->
             <sly data-sly-resource="${'footer-link-list-popular' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
           </div>
           <div class="eaton-footer-top__social-links">
+            <!--/* Component: Social Links */-->
             <sly data-sly-resource="${'footer-social-links' @ resourceType='/apps/eaton/static-components/content/social-links'}"></sly>
           </div>
         </div>
@@ -50,6 +52,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="eaton-footer-bottom__link-list">
+            <!--/* Component: LinkList */-->
             <sly data-sly-resource="${'footer-link-list-legal' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
           </div>
           <div class="eaton-footer-bottom__copyright"> ${ data.bottom.copyright } </div>
