--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -1,5 +1,5 @@
 
-<header data-sly-use.header="header-data.js">
+<sly data-sly-use.header="header-data.js">
     <div class="eaton-header">
         <!--/* Include: Full Page Drawer */*/-->
         <sly data-sly-resource="${'full-page-drawer' @ resourceType='eaton/static-components/structure/full-page-drawer'}"></sly>
@@ -55,4 +55,4 @@
         <!--/* Include: Mega Menu */-->
         <sly data-sly-resource="${'mega-menu' @ resourceType='eaton/static-components/structure/mega-menu'}"></sly>
     </div>
-</header>
+</sly>
