--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-content-page/body.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-content-page/body.html
@@ -1,3 +1,15 @@
+
+<!--/* Include Header Component */-->
+<header>
+  <sly data-sly-resource="${'eaton-header' @ resourceType='eaton/static-components/structure/header'}"></sly>
+</header>
+
+<!--/* Include Page Content */-->
 <div class="container-full">
     <sly data-sly-resource="${'par' @ resourceType='wcm/foundation/components/parsys'}"></sly>
 </div>
+
+<!--/* Include Footer Component */-->
+<footer>
+  <sly data-sly-resource="${'eaton-footer' @ resourceType='eaton/static-components/structure/footer'}"></sly>
+</footer>
