--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
@@ -1,5 +1,5 @@
 <!--/* –––––––– Component M7: Footer –––––––– /*-->
-<sly class="eaton-footer"
+<div class="eaton-footer"
   data-sly-use.data="data/footer-data.js">
 
   <!--/* Footer: Top */-->
@@ -61,4 +61,4 @@
     </div>
   </div>
 
-</sly>
+</div>
