Create TTIL - Single Feature Views

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -29,6 +29,13 @@
                   <sly data-sly-resource="${'link-list' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
                 </div>
             </div>
+
+            <div class="col-xs-12 col-md-3">
+                <!--/* Include: TTIL - Single Feature */ -->
+                <div class="mega-menu__category-item">
+                  <sly data-sly-resource="${'single-feature' @ resourceType='/apps/eaton/static-components/content/title-text-image-link'}"></sly>
+                </div>
+            </div>
           </div>
       </div>
     </div>
