--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
@@ -6,6 +6,6 @@
     <sly data-sly-include="views/view-l2-hero.html" data-sly-unwrap></sly>
 </sly>
 
-<sly data-sly-test="${ wcmmode.edit }">
-    <div class="alert alert-warning">Title Text Image Link Component - Edit End</div>
+<sly data-sly-test="${properties.view == 'single-feature'}">
+    <sly data-sly-include="views/view-single-feature.html" data-sly-unwrap></sly>
 </sly>
