Pushing Single Feature Module — develop

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -24,7 +24,7 @@
                   <sly data-sly-resource="${'search-inline' @ resourceType='/apps/eaton/static-components/content/search-box'}"></sly>
                 </div>
 
-                <!--/* Include: Link List - default */ -->
+                <!--/* Include: Link List - Default */ -->
                 <div class="mega-menu__category-item">
                   <sly data-sly-resource="${'link-list' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
                 </div>
