--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
@@ -9,3 +9,11 @@
 <sly data-sly-test="${properties.view == 'single-feature'}">
     <sly data-sly-include="views/view-single-feature.html" data-sly-unwrap></sly>
 </sly>
+
+<sly data-sly-test="${properties.view == 'download-list'}">
+    <sly data-sly-include="views/view-download-list.html" data-sly-unwrap></sly>
+</sly>
+
+<sly data-sly-test="${properties.view == 'download-list-desc'}">
+    <sly data-sly-include="views/view-download-list-desc.html" data-sly-unwrap></sly>
+</sly>
