--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -36,6 +36,20 @@
                   <sly data-sly-resource="${'single-feature' @ resourceType='/apps/eaton/static-components/content/title-text-image-link'}"></sly>
                 </div>
             </div>
+
+            <div class="col-xs-12 col-md-3">
+                <!--/* Include: TTIL - Download List */ -->
+                <div class="mega-menu__category-item">
+                  <sly data-sly-resource="${'download-list' @ resourceType='/apps/eaton/static-components/content/title-text-image-link'}"></sly>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-md-3">
+                <!--/* Include: TTIL - Download List with Descriptions */ -->
+                <div class="mega-menu__category-item">
+                  <sly data-sly-resource="${'download-list-desc' @ resourceType='/apps/eaton/static-components/content/title-text-image-link'}"></sly>
+                </div>
+            </div>
           </div>
       </div>
     </div>
