--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/title-text-image-link.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/title-text-image-link.html
@@ -1,3 +1,3 @@
 <!-- Integrated code goes here -->
 
-<div data-sly-include="static_title-text-image-link.html"></div>
+<sly data-sly-include="static_title-text-image-link.html"></sly>
