--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/static_link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/static_link-list.html
@@ -21,3 +21,12 @@
 <sly data-sly-test="${ properties.view == 'horizontal' }">
   <sly data-sly-include="views/view-horizontal.html" data-sly-unwrap></sly>
 </sly>
+
+
+<sly data-sly-test="${properties.view == 'download-list'}">
+    <sly data-sly-include="views/view-download-list.html" data-sly-unwrap></sly>
+</sly>
+
+<sly data-sly-test="${properties.view == 'download-list-desc'}">
+    <sly data-sly-include="views/view-download-list-desc.html" data-sly-unwrap></sly>
+</sly>
