--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -33,14 +33,14 @@
             <div class="mega-menu__col mega-menu__col--4">
                 <!--/* Include: TTIL - Single Feature */ -->
                 <div class="mega-menu__category-item">
-                  <sly data-sly-resource="${'single-feature' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+                  <sly data-sly-resource="${'download-list-1' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
                 </div>
             </div>
 
             <div class="mega-menu__col mega-menu__col--4">
-                <!--/* Include: TTIL - Download List */ -->
+                <!--/* Include: LinkList - Download List */ -->
                 <div class="mega-menu__category-item">
-                  <sly data-sly-resource="${'download-list' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+                  <sly data-sly-resource="${'download-list-2' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
                 </div>
             </div>
 
@@ -50,9 +50,9 @@
                   <sly data-sly-resource="${'single-feature' @ resourceType='/apps/eaton/static-components/content/title-text-image-link'}"></sly>
                 </div>
 
-                <!--/* Include: TTIL - Download List */ -->
+                <!--/* Include: Link List - Download List */ -->
                 <div class="mega-menu__category-item">
-                  <sly data-sly-resource="${'download-list' @ resourceType='/apps/eaton/static-components/content/title-text-image-link'}"></sly>
+                  <sly data-sly-resource="${'download-list-3' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
                 </div>
             </div>
 
