Mega Menu - Show active menu-page

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -1,4 +1,4 @@
-<div class="mega-menu__content">
+<div class="mega-menu__content mega-menu__content--active">
     <!--/* Include Level 1: Links *-->
     <div class="container">
         <div class="eaton-title">
