--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -2,7 +2,7 @@
     <!--/* Include Level 1: Links *-->
     <div class="container">
         <div class="eaton-title">
-            <a href="#" class="eaton-title__level1-link">
+            <a href="#" class="eaton-title__level1-link products-link">
               <i class="eaton-title__icon glyphicon glyphicon-menu-left" aria-hidden="true"></i>
               <span>Products</span>
               <i class="eaton-title__icon glyphicon glyphicon-menu-right" aria-hidden="true"></i>
