--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -1,8 +1,8 @@
-<div class="mega-menu__content mega-menu__content--active" data-target="menu-menu-products">
+<div class="mega-menu__content" data-target="mega-menu-products">
     <!--/* Include Level 1: Links *-->
     <div class="container">
         <div class="eaton-title">
-            <a href="#" class="eaton-title__level1-link products-link">
+            <a href="#" class="eaton-title__level1-link">
               <i class="eaton-title__icon glyphicon glyphicon-menu-left" aria-hidden="true"></i>
               <span>Products</span>
               <i class="eaton-title__icon glyphicon glyphicon-menu-right" aria-hidden="true"></i>
