--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-services.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-services.html
@@ -1,4 +1,4 @@
-<div class="mega-menu__content" data-target="menu-menu-services">
+<div class="mega-menu__content" data-target="mega-menu-services">
     <!--/* Include Level 1: Links *-->
     <div class="container">
         <div class="eaton-title">
