Header Behaviors - In Progress

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
@@ -13,6 +13,9 @@
 
             <!--/*  Include: Mega-Menu-Company */-->
             <sly data-sly-include="pages/mega-menu-company.html" />
+
+            <!--/*  Include: Mega-Menu-Markets */-->
+            <sly data-sly-include="pages/mega-menu-markets.html" />
         </div>
     </div>
 </section>
